# simplify.rs

./: Cargo.toml  README.md
benches/: bench_main.rs
benches/benchmarks/: mod.rs  simplify.rs
src/: lib.rs
