[package]
name = "simplify"
version = "0.1.1"
authors = ["Cheng JIANG <cheng.jiang@outlook.fr>"]
edition = "2018"
description = "simplify-js port to rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion= "0.2.5"

[[bench]]
name = "bench_main"
harness = false

[lib]
bench = false
